Fix contrast warnings and fullWidth layout

--- a/src/themes/eui-amsterdam/global_styling/mixins/_button.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_button.scss
@@ -15,24 +15,44 @@
   }
 }
 
-// Creates the Amsterdam style of button with a transparent background
-@mixin euiButtonDefaultStyle($color, $includeStates: true, $transparency: $euiButtonDefaultTransparency) {
+/*
+ * Creates the Amsterdam style of button with a transparent background
+ */
+@mixin euiButtonDefaultStyle($color: 'primary', $includeStates: true, $transparency: $euiButtonDefaultTransparency) {
+  $backgroundColor: $color;
+
+  @if (map-has-key($euiButtonTypes, $color)) {
+    $backgroundColor: map-get($euiButtonTypes, $color);
+  }
+
   $percentConversion: $transparency * 100%;
   // This variable simulates the possibly darkest background the button could be on
   // Simulates the 20% opaque color on top of the page background color
-  $backgroundColorSimulated: mix($euiPageBackgroundColor, $color, $percentConversion);
+  $backgroundColorSimulated: mix($euiPageBackgroundColor, $backgroundColor, $percentConversion);
   // Then we can calculate the darkest text color needed
-  color: makeHighContrastColor($color, $backgroundColorSimulated);
+  color: makeHighContrastColor($backgroundColor, $backgroundColorSimulated);
   // But still use transparency
-  background-color: transparentize($color, $transparency);
+  background-color: transparentize($backgroundColor, $transparency);
 
   @if ($includeStates) {
     &:not([class*='isDisabled']) {
       &:hover,
       &:focus {
         // Duplicated from inert state simply to override default theme
-        background-color: transparentize($color, $transparency);
+        background-color: transparentize($backgroundColor, $transparency);
       }
     }
   }
+}
+
+// Creates the Amsterdam style of button with a transparent background
+@mixin euiButtonFillStyle($color: 'primary') {
+  $backgroundColor: $color;
+
+  @if (map-has-key($euiButtonTypes, $color)) {
+    $backgroundColor: map-get($euiButtonTypes, $color);
+  }
+
+  background-color: $backgroundColor;
+  color: chooseLightOrDarkText($backgroundColor);
 }
