--- a/src/themes/eui-amsterdam/global_styling/react_date_picker/_date_picker.scss
+++ b/src/themes/eui-amsterdam/global_styling/react_date_picker/_date_picker.scss
@@ -99,6 +99,10 @@
   @include euiTextTruncate;
 }
 
+.react-datepicker__month-container {
+  flex-grow: 1;
+}
+
 .react-datepicker__month {
   text-align: center;
   border-radius: $euiBorderRadius;
